Add Malay Jawi and Rumi

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="wrapper-background-filter"></div>
             <div id="wrapper-background"></div>
             <div id="content">
-                <div id="title-container">
-                    <h1 id="page-title">Welcome to herta kuru</h1>
+                <div dir="auto" id="title-container">
+                    <h1 dir="auto" id="page-title">Welcome to herta kuru</h1>
                     <img id="title-img" alt="img of herta" src="img/favicon.ico">
                 </div>
                 <!-- <div id="language-selector-container">
@@ -35,33 +35,33 @@
                         </select>
                 </div> -->
 
-                <h2 id="page-descriptions">
+                <h2 dir="auto" id="page-descriptions">
                     The website for Herta, the <del>annoying</del> cutest genius Honkai:
                     Star Rail character out there.
                 </h2>
-                <div id="counter-container">
+                <div dir="auto" id="counter-container">
                     <h3 id="counter-descriptions">The kuru~ has been squished</h3>
                     <br />
                     <br />
                     <p id="local-counter">0</p>
                     <br />
                     <br />
-                    <p id="counter-unit">times</p>
+                    <p style="color: white; font-family: JAWI Al Arabiya, Calibri;" id="counter-unit">times</p>
                     <button id="counter-button">
                         Squish the kuru~!
                     </button>
                 </div>
-                <div id="grid">
+                <div dir="auto" id="grid">
                     <noscript>Your browser does not support JavaScript or JavaScript has been
                         disabled.<br />This website relies on JavaScript, so please enable it
                         or use another browser.</noscript>
                 </div>
             </div>
         </main>
-        <div id="footer">
+        <div dir="auto" id="footer" class="wrapper-background">
             <img id="herta-card" loading="lazy" src="img/card_en.jpg" class="img-autocdn" alt="" />
             <div id="footer-text">
-                <div class="mdui-list"><a href="javascript:void(0);" class="mdui-list-item mdui-ripple"
+                <div class="mdui-list mdui-text-color-white"><a href="javascript:void(0);" class="mdui-list-item mdui-ripple"
                         id="show-credits-opt">
                         <i class="mdui-icon mdui-list-item-icon ion-md-people mdui-text-color-black-icon"></i>
                         <div class="mdui-list-item-content footer-icon-text about-link" id="show-credits-text">
