--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
     <script src="script.js" async></script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T303QPC9L9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-PG73376"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-T303QPC9L9');
+        gtag('config', 'GTM-PG73376');
     </script>
 </body>
 
